[package]
name = "my-nosql-contracts"
version = "0.1.37"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
isolated-margin = []
cross-margin = []
price-src = []

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

serde = { version = "*", features = ["derive"] }
